--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,18 @@ body {
   border: 2.5px solid #26C0AB;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .button {
   width: 110px;
   height: 45px;
